--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -7,11 +7,13 @@
     <title>Class and ID Selectors</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
+
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class = "regular-class">Number 1 - I'm a class!</p>
+    <div id = "one-ID">Number 2 - I'm one ID.</div>
+    <p class = "cool-class regular-class">Number 3 - I'm a class, but cooler!</p>
+    <div id = "another-id">Number 4 - I'm another ID.</div>
+    <p class = "regular-class">Number 5 - I'm a class!</p>
   </body>
 </html>
