completed exercise 3, made communal class + own ID so i made new p elements to make class selectors

--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -7,8 +7,14 @@
     <title>Grouping Selectors</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
+
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class = "buttons", id = "first">Click Me!</button>
+    <button class = "buttons", id = "second">No, Click Me!</button>
+
+
+    <p class = "regular">I am the normal one</p>
+    <p class = "irregular">how am <em>I</em> the weird one =(</p>
   </body>
 </html>
